--- a/app/views/docs/command-line.phtml
+++ b/app/views/docs/command-line.phtml
@@ -1,10 +1,10 @@
-<p>The <a href="https://github.com/appwrite/sdk-for-cli" target="_blank" rel="noopener">Appwrite CLI</a> is a command-line application that allows you to interact with the <a href="/docs/getting-started-for-server">Appwrite server</a> and perform server-side tasks using your terminal. This includes creating and managing projects, managing resources (documents, files, users), creating and deploying Cloud Functions, and other operations available through Appwrite's API.</p>
+<p>The <a href="https://github.com/appwrite/sdk-for-cli" target="_blank" rel="noopener">Appwrite CLI</a> is a command-line application that allows you to interact with the <a href="/docs/getting-started-for-server">Appwrite server</a> and perform server-side tasks using your terminal. This includes creating and managing projects, managing resources (documents, files, users), creating and deploying Appwrite Functions, and other operations available through Appwrite's API.</p>
 
 <h2><a href="/docs/command-line#installation" id="installation">Installation</a></h2>
 
 <p>The CLI is packaged both as an <a href="https://www.npmjs.com/package/appwrite-cli">npm module</a> as well as a <a href="https://github.com/appwrite/sdk-for-cli/releases/latest">standalone binary</a> for your operating system, making it completely dependency free, platform independent and language agnostic.</p>
 
-<p>If you plan to use the CLI to initialize new Cloud Functions, ensure that <a href="https://git-scm.com/book/en/v2/Getting-Started-Installing-Git" target="_blank" rel="noopener">Git is installed</a> on your machine.</p>
+<p>If you plan to use the CLI to initialize new Appwrite Functions, ensure that <a href="https://git-scm.com/book/en/v2/Getting-Started-Installing-Git" target="_blank" rel="noopener">Git is installed</a> on your machine.</p>
 
 <h3><a href="/docs/command-line#installWithNpm" id="installWithNpm">Install with NPM</a></h3>
 
@@ -79,18 +79,18 @@ brew install --HEAD appwrite</code></pre>
 </div>
 
 <h2><a href="/docs/command-line#next-steps" id="next-steps">Next Steps</a></h2>
-<p>Besides utility commands, Appwrite CLI can be used to execute commands like a Server SDK.</p>
+<p>Besides utility commands, the CLI can be used to execute commands like a Server SDK.</p>
 <p>
 <a href="/docs/command-line-commands"><i class="icon-angle-circled-right"></i>Find a full list of commands</a>
 </p>
-<p>You can use the Appwrite CLI to create and deploy functions and collection. Deploy commands allow you to configure your Appwrite project programmatically and replicate functions and collection schemas across Appwrite projects.</p>
+<p>You can use the CLI to create and deploy functions and collections. Deploy commands allow you to configure your Appwrite project programmatically and replicate functions and collection schemas across Appwrite projects.</p>
 <p>
 <a href="/docs/command-line-deployment"><i class="icon-angle-circled-right"></i>Learn more about deployment</a>
 </p>
-<p>You can choose to use Appwrite in a headless and non-interactive mode, without the need for config files or sessions. This is useful for CI or scripting use cases.</p>
+<p>You can choose to use the CLI in a headless and non-interactive mode without the need for config files or sessions. This is useful for CI or scripting use cases.</p>
 
 <p>
-<a href="/docs/command-line-ci"><i class="icon-angle-circled-right"></i>Learn more about CI Mode</a>
+<a href="/docs/command-line-ci"><i class="icon-angle-circled-right"></i>Learn more about CI mode</a>
 </p>
 
 <h2><a href="/docs/command-line#help" id="help">Help</a></h2>
