--- a/app/views/docs/command-line-ci.phtml
+++ b/app/views/docs/command-line-ci.phtml
@@ -17,11 +17,11 @@ The Appwrite CLI can be used in a non-interactive and headless manner, without s
 <p>In this mode, the CLI can only interact with one project at a time.</p>
 
 <h2><a href="/docs/commandline-ci#keys" id="keys">API Keys</a></h2>
-<p>In CI mode, the CLI uses <b>API Key</b> to authenticate. Ensure the API key you use has the sufficient permissions to execute the commands you plan to use. You can learn more about <a href="/docs/keys">API Keys</a>.</p>
+<p>In CI mode, the CLI uses an <b>API key</b> to authenticate. Your API key must have sufficient permissions to execute the commands you plan to use. <a href="/docs/keys">Learn more about API Keys</a>.</p>
 
 <h2><a href="/docs/command-line-ci#configuration" id="configuration">Configuration</a></h2>
 
-<p>At any point, if you would like to change your server endpoint, project key, or self-signed certificate acceptance, use the <code>client</code> command.</p>
+<p>At any point, if you would like to change your server's endpoint, project ID, or self-signed certificate acceptance, use the <code>client</code> command.</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite client --endpoint https://[HOSTNAME_OR_IP]/v1
