Add <p> tag where missing

--- a/app/views/docs/command-line-deployment.phtml
+++ b/app/views/docs/command-line-deployment.phtml
@@ -54,7 +54,7 @@ The Apprite CLI allows you to create and deploy collections and functions to you
 <p>An <code>appwrite.json</code> file is created by the CLI when you initialize your project. It stores all the configuration for the CLI to be able to interact with your Appwrite project in JSON format. When using the <code>appwrite deploy</code> command, the CLI uses information from <code>appwrite.json</code> to deploy your functions and collections.</p>
 
 <h3><a href="/docs/command-line-deployment#configurable-options" id="configurable-options">Configurable Options</a></h3>
-Here's a complete list of all configurable options in <code>appwrite.json</code>:
+<p>Here's a complete list of all configurable options in <code>appwrite.json</code>:</p>
 <table cellspacing="0" cellpadding="0" border="0" class="full margin-bottom-large">
     <thead>
         <tr>
