--- a/app/views/docs/command-line-ci.phtml
+++ b/app/views/docs/command-line-ci.phtml
@@ -18,3 +18,24 @@ The Appwrite CLI can be used in a non-interactive and headless manner, without s
 
 <h2><a href="/docs/commandline-ci#keys" id="keys">API Keys</a></h2>
 <p>In CI mode, the CLI uses an <b>API key</b> to authenticate. Your API key must have sufficient permissions to execute the commands you plan to use. <a href="/docs/keys">Learn more about API Keys</a>.</p>
+
+<h2><a href="/docs/commandline-ci#non-interactive" id="non-interactive">Non-interactive Deployment</a></h2>
+<p>Appwrite's deploy commands can also be executed in a non-interactive mode. This applies to both function and collection deployment.</p>
+
+<p>You can deploy a function non-interactively by using the <code>--yes<code> option to skip all warnings and specifying which functions you want to deploy.</p>
+
+<p>Deploy a single function by ID:</p>
+<div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite deploy function --functionId [FUNCTION ID] --yes</code></pre>
+</div>
+
+<p>Deploy all functions:</p>
+<div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite deploy function --all --yes</code></pre>
+</div>
+
+<p>You can deploy collections non-interactively in a similar way by using the <code>--yes<code> option.</p>
+<p>Deploy all collections:</p>
+<div class="ide margin-bottom" data-lang="bash" data-lang-label="CLI">
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>appwrite deploy collections --all --yes</code></pre>
+</div>
