--- a/app/views/docs/offline.phtml
+++ b/app/views/docs/offline.phtml
@@ -16,5 +16,5 @@
 </p>
 <h3>Offline Support for Existing Projects</h3>
 <p>
-    Promises may not resolve immediately when Offline Support is enabled. Existing projects will require some code to be rewritten when adopting Offline Support. <a href="TBD">Learn more about promise resolution</a>.  
+    Asynchronous operations may not resolve immediately when Offline Support is enabled. Existing projects will require some code to be rewritten when adopting Offline Support. <a href="TBD">Learn more about how to handle asynchronous operation</a>.  
 </p>
