Change format to a notice

--- a/app/views/docs/authentication.phtml
+++ b/app/views/docs/authentication.phtml
@@ -296,7 +296,10 @@ try await account.createOAuth2Session(provider: "amazon")</code></pre>
         </div>
     </li>
     <li>
-        <p>OAuth is not available through the GraphQL API. You can use the REST API or any Client SDK instead.</p>
+        <h3>GraphQL</h3>
+        <div class="notice">
+            <p>OAuth is not available through the GraphQL API. You can use the REST API or any Client SDK instead.</p>
+        </div>
     </li>
 </ul>
 
