--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -160,7 +160,7 @@ let promise = databases.createDocument(
     [
         Permission.read(Role.team("5c1f88b87435e")),            // Only users of team 5c1f88b87435e can read the document
         Permission.update(Role.team("5c1f88b87435e", "owner")), // Only users of team 5c1f88b87435e with the role owner can update the document
-        Permission.delete(Role.team("5c1f88b87435e", "owner")   // Only users of team 5c1f88b87435e with the role owner can delete the document
+        Permission.delete(Role.team("5c1f88b87435e", "owner"),   // Only users of team 5c1f88b87435e with the role owner can delete the document
     ]
 );
 
