--- a/app/views/docs/command-line-deployment.phtml
+++ b/app/views/docs/command-line-deployment.phtml
@@ -81,7 +81,7 @@ The Apprite CLI allows you to create and deploy collections and functions to you
         </tr>
         <tr>
             <td><code>collections</code></td>
-            <td>Array of <a href="/docs/command-line-deployment#collection-options">collections</a></td>
+            <td>array of <a href="/docs/command-line-deployment#collection-options">collections</a></td>
             <td>Configuration of collections in your project.</td>
         </tr>
     </tbody>
