--- a/app/views/docs/response-codes.phtml
+++ b/app/views/docs/response-codes.phtml
@@ -94,7 +94,7 @@ $errorTypes = $this->getParam('errors', []);
         <tr>
             <td data-title="Code: ">429</td>
             <td data-title="Text: ">Too Many Requests</td>
-            <td data-title="Description: ">Returned in when a request cannot be served due to the application’s rate limit having been exhausted for the resource. <a href="/docs/rate-limits">See Rate Limits</a></td>
+            <td data-title="Description: ">Returned in when a request cannot be served due to the application's rate limit having been exhausted for the resource. <a href="/docs/rate-limits">See Rate Limits</a></td>
         </tr>
 
         <tr>
@@ -118,7 +118,7 @@ $errorTypes = $this->getParam('errors', []);
         <tr>
             <td data-title="Code: ">504</td>
             <td data-title="Text: ">Gateway timeout</td>
-            <td data-title="Description: ">The Appwrite servers are up, but the request couldn’t be serviced due to some failure within the stack. Try again later.</td>
+            <td data-title="Description: ">The Appwrite servers are up, but the request couldn't be serviced due to some failure within the stack. Try again later.</td>
         </tr>
 
     </tbody>
