Add information about vars in environment variable page

--- a/app/views/docs/environment-variables.phtml
+++ b/app/views/docs/environment-variables.phtml
@@ -15,7 +15,10 @@ $markdown->setSafeMode(true);
     <pre class="line-numbers"><code class="prism language-bash" data-prism>docker compose up -d</code></pre>
 </div>
 
-<p>You can verify the changes</p>
+<p>You can verify if the changes have been successfully applied by running this command:</p>
+<div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker compose exec appwrite vars</code></pre>
+</div>
 
 <p><b>All Options:</b></p>
 
