Command in SMS to be worker-messaging

--- a/app/views/docs/sms-delivery.phtml
+++ b/app/views/docs/sms-delivery.phtml
@@ -142,5 +142,5 @@
     You can verify if the environment variables have changed by running this command:
 </p>
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker compose exec appwrite-worker-mails vars</code></pre>
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker compose exec appwrite-worker-messaging vars</code></pre>
 </div>
