--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -44,9 +44,10 @@ $cols = [
                     </li>
                     <li><a href="/docs/sdks">SDKs</a></li>
                     <li>
-                        <a href="/docs/installation"><i class="icon-right-dir"></i> Self-Hosting</a>
+                        <a href="/docs/self-hosting"><i class="icon-right-dir"></i> Self-Hosting</a>
 
                         <ul class="margin-top-small margin-bottom-small">
+                            <li>&nbsp;&nbsp;<a href="/docs/configuration" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Configuration</a></li>
                             <li>&nbsp;&nbsp;<a href="/docs/production" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Production</a></li>
                             <li>&nbsp;&nbsp;<a href="/docs/environment-variables" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Env. Variables</a></li>
                             <li>&nbsp;&nbsp;<a href="/docs/email-delivery" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Email Delivery</a></li>
